[project]
name = "survey-analyzer"
version = "0.1.0"
description = "CLI tool for analyzing Survey Monkey CSV exports"
authors = [
    {name = "tlong"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
