[project]
name = "survey-analyzer"
version = "0.1.0"
description = "CLI tool for analyzing Survey Monkey CSV exports"
authors = [
    {name = "tlong"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "click (>=8.3.1,<9.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "kaleido (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
